2010-01-21  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	* doc/Doxygen is added.
	* configure.ac set version to 1.3.5 in AC_INIT().
	* h5get.cc updated comments for Doxygen.
	* h5dds.cc updated comments for Doxygen.
	* h5das.cc updated comments for Doxygen.
	* HE5Parser.h removed useless boolean variables.

2010-01-20  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	* h5das.cc removed double quotes.
	* h5das.cc renamed COARDS,GrADS to CF-1.4.
	* h5das.cc added fake in lev/time long_name attribute.

2010-01-19  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	Corrected the missing dimension names in the old(<2007) OMUVB product.

2010-01-12  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	Corrected coordinates attribute for 2D-swath case.
	
	* HE5Parser.cc has now set_swath_2D().
	* h5das.cc removed extra "lat lon" attribute insertion.

	Re-organized source codes and made swath handling robust.
	
	* HE5CFGrid class is added.
	* HE5CSwath class is added.
	* common.h is removed.
	* hdf5_handler.h has the contents of the old common.h.
	
2009-12-18  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	* HE5Parser.cc fix for Ticket #1460.

2009-12-11  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	* hdfeos_das.lex/y is renamed to he5das.lex/y 
	* hdfeos.lex/y is renamed to he5dds.lex/y 
	* H5EOS.h/cc is renamed to HE5Parser.h/cc.
	* H5CF.h/cc is renamed to HE5CF.h/cc.
	* H5ShortName.h/cc is renamed to HE5ShortName.h/cc.
	* H5PathFinder.h/cc is renamed to HDF5PathFinder.h/cc.

2009-12-10  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	* h5_handler.h is renamed to hdf5_handler.h and is cleaned-up.
	* H5Git.h/cc is renamed to h5get.h/cc to distinguish them from classes.

2009-10-07  James Gallagher <jgallagher@opendap.org>

	This version is for the special (source) release of the handler
	that includes support for HDF-EOS5.

	A    http://scm.opendap.org/svn/tags/hdf5_handler/1.3.4

2009-10-06  hyoklee

	Fixed suppressing path from a dataset name of an h4toh5 converted